--- a/CSS/login_styles.css
+++ b/CSS/login_styles.css
@@ -1,110 +1,64 @@
-
-/*source https://www.w3schools.com/howto/howto_css_login_form.asp */
-
-/* Bordered form */
-form {
-  border: 6px solid #f1f1f1;
-}
-
-/* Full-width inputs */
-input[type=text], input[type=password] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
+*, ::after, ::before {
   box-sizing: border-box;
 }
 
-/* Set a style for all buttons */
-button {
-  background-color: #009405;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
-
-/* Add a hover effect for buttons */
-button:hover {
-  opacity: 0.8;
-}
-
-/* Extra style for the cancel button (red) */
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
-}
-
-
-/* Add padding to containers */
-.container {
-  padding: 16px;
-}
-
-/* The "Forgot password" text */
-span.psw {
-  float: right;
-  padding-top: 16px;
-}
-
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-  span.psw {
-    display: block;
-    float: none;
-  }
-  .cancelbtn {
-    width: 100%;
-  }
-}
-
-
-
-
-
-
-
-
-/* Maybe */
-
-/* *, ::after, ::before {
-  box-sizing: border-box;
-}
 body {
-  background-color: #212121;
+  background-color: #000;
+  /* background-color: #020024; */
   color: #fff;
-  font-family: monospace, serif;
+  font-family: "Open Sans", sans-serif;
   letter-spacing: 0.05em;
 }
-h1 {
-  font-size: 23px;
+
+a{
+  text-decoration: none;
+  color: inherit;
 }
+
+.site_name{
+  font-family: "Shrikhand", cursive;
+  color: #fee140;
+  font-size: xx-large;
+  text-shadow: -1px 0 #ff32af, 0 1px #ff32af, 1px 0 #ff32af, 0 -1px #ff32af;
+  margin-bottom: 1%;
+  margin-top: 0;
+  margin-left: 1%;
+}
+
+h2 {
+  font-size: larger;
+}
+
 .form {
   width: 300px;
   padding: 64px 15px 24px;
   margin: 0 auto;
 }
+
 .form .control {
   margin: 0 0 24px;
 }
+
 .form .control input {
   width: 100%;
   padding: 14px 16px;
   border: 0;
   background: transparent;
   color: #fff;
-  font-family: monospace, serif;
+  font-family: "Open Sans", sans-serif;
   letter-spacing: 0.05em;
   font-size: 16px;
 }
+
+.no-width{
+  width: 1rem !important;
+}
+
 .form .control input:hover, .form .control input:focus {
   outline: none;
   border: 0;
 }
+
 .form .btn {
   width: 100%;
   display: block;
@@ -115,26 +69,32 @@ h1 {
   color: #fff;
   letter-spacing: 0.1em;
   font-weight: bold;
-  font-family: monospace;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
+  margin-bottom: 24px;
+  cursor: pointer;
 }
+
 .block-cube {
   position: relative;
 }
+
 .block-cube .bg-top {
   position: absolute;
   height: 10px;
   background: #020024;
-  background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(52, 9, 121, 1) 37%, rgba(0, 212, 255, 1) 94%);
+  background: linear-gradient(90deg, rgba(255, 50, 175, 1) 0%, rgba(253, 200, 48, 1) 94%);
   bottom: 100%;
   left: 5px;
   right: -5px;
   transform: skew(-45deg, 0);
   margin: 0;
 }
+
 .block-cube .bg-top .bg-inner {
   bottom: 0;
 }
+
 .block-cube .bg {
   position: absolute;
   left: 0;
@@ -142,12 +102,13 @@ h1 {
   right: 0;
   bottom: 0;
   background: #020024;
-  background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(52, 9, 121, 1) 37%, rgba(0, 212, 255, 1) 94%);
+  background: linear-gradient(90deg, rgba(255, 50, 175, 1) 0%,  rgba(253, 200, 48, 1) 94%);
 }
+
 .block-cube .bg-right {
   position: absolute;
   background: #020024;
-  background: rgba(0, 212, 255, 1);
+  background: rgba(253, 200, 48, 1);
   top: -5px;
   z-index: 0;
   bottom: 5px;
@@ -155,59 +116,53 @@ h1 {
   left: 100%;
   transform: skew(0, -45deg);
 }
+
 .block-cube .bg-right .bg-inner {
   left: 0;
 }
+
 .block-cube .bg .bg-inner {
   transition: all 0.2s ease-in-out;
 }
+
 .block-cube .bg-inner {
-  background: #212121;
+  background: #000;
+  /* background: #212121; */
   position: absolute;
   left: 2px;
   top: 2px;
   right: 2px;
   bottom: 2px;
 }
+
 .block-cube .text {
   position: relative;
   z-index: 2;
 }
+
 .block-cube.block-input input {
   position: relative;
   z-index: 2;
 }
+
 .block-cube.block-input input:focus ~ .bg-right .bg-inner, .block-cube.block-input input:focus ~ .bg-top .bg-inner, .block-cube.block-input input:focus ~ .bg-inner .bg-inner {
   top: 100%;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 50, 175, 1);
 }
+
 .block-cube.block-input .bg-top, .block-cube.block-input .bg-right, .block-cube.block-input .bg {
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(253, 200, 48, 1);
   transition: background 0.2s ease-in-out;
 }
+
 .block-cube.block-input .bg-right .bg-inner, .block-cube.block-input .bg-top .bg-inner {
   transition: all 0.2s ease-in-out;
 }
+
 .block-cube.block-input:focus .bg-top, .block-cube.block-input:hover .bg-top, .block-cube.block-input:focus .bg-right, .block-cube.block-input:hover .bg-right, .block-cube.block-input:focus .bg, .block-cube.block-input:hover .bg {
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 50, 175, 1);
 }
-.block-cube.block-cube-hover:focus .bg .bg-inner, .block-cube.block-cube-hover:hover .bg .bg-inner {
+
+.block-cube.block-cube-hover:focus .bg .bg-inner  {
   top: 100%;
 }
-.credits {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  padding: 15px 15px;
-  width: 100%;
-  z-index: 111;
-}
-.credits a {
-  opacity: 0.6;
-  color: #fff;
-  font-size: 11px;
-  text-decoration: none;
-}
-.credits a:hover {
-  opacity: 1;
-} */
