Updating the Game
Made the semi-final changes to the game

--- a/CSS/game_styles.css
+++ b/CSS/game_styles.css
@@ -133,6 +133,10 @@ header, footer, article, div{
     animation: progres 4s infinite linear;
 }
 
+#hearts .bar{
+    width: 80%;
+}
+
 /* @keyframes progres{
     0%{
       width: 0%;
